test/test-cases/verify/negative/malformed-wrong-statement-type_fail/bundle.sig
{
  "mediaType": "application/vnd.dev.sigstore.bundle.v0.3+json",
  "verificationMaterial": {
    "publicKey": {
      "hint": "e8450dec4eb99dae995da9af1bc2cc9f76ed669ee2e744f57abba763df3e3f8e"
    },
    "tlogEntries": []
  },
  "dsseEnvelope": {
    "payload": "eyJfdHlwZSI6ICJodHRwczovL2luLXRvdG8uaW8vU3RhdGVtZW50L3YwLjEiLCAic3ViamVjdCI6IFt7Im5hbWUiOiAibW9kZWwiLCAiZGlnZXN0IjogeyJzaGEyNTYiOiAiOTI3NDUxMTBiMWFiNDM2ODQ3MWNiZTMxNjY0ZTEwMTc0ZTk1NGIxMTNhM2RmMzMzZGI4NjAzMTdiMmM2ZGVjNCJ9fV0sICJwcmVkaWNhdGVUeXBlIjogImh0dHBzOi8vbW9kZWxfc2lnbmluZy9zaWduYXR1cmUvdjEuMCIsICJwcmVkaWNhdGUiOiB7InJlc291cmNlcyI6IFt7ImRpZ2VzdCI6ICJiYzlhNzE3ZGI2MDY0YTMyY2JlOWVhZTZmYzQwNjUxZGQ2ZDM2ZWYxNzU3MTgzZjU5MGVmZjJiMTc2NWQ3ZWJjIiwgImFsZ29yaXRobSI6ICJzaGEyNTYiLCAibmFtZSI6ICJzaWdubWUtMSJ9LCB7ImRpZ2VzdCI6ICIzMmRjYjFmOGUxYWU1MmQ1OTYzZTU2YTZiYTA2YWI1OGI0MjRjMTVlZDJhNmI3MGQyZmVjYTFkMDg5MzcwMDI4IiwgImFsZ29yaXRobSI6ICJzaGEyNTYiLCAibmFtZSI6ICJzaWdubWUtMiJ9XSwgInNlcmlhbGl6YXRpb24iOiB7Im1ldGhvZCI6ICJmaWxlcyIsICJpZ25vcmVfcGF0aHMiOiBbIi5naXRhdHRyaWJ1dGVzIiwgIi5naXRodWIiLCAiaWdub3JlLW1lIiwgIi5naXRpZ25vcmUiLCAiLmdpdCJdLCAiaGFzaF90eXBlIjogInNoYTI1NiIsICJhbGxvd19zeW1saW5rcyI6IGZhbHNlfX19",
    "payloadType": "application/vnd.in-toto+json",
    "signatures": [
      {
        "sig": "MGQCMDNHlJBKxhHVeSWQ+RWXT2LKSOcd3fF6jQLxRs8zdXnJI9Ff8zKrDeMLvprDzqzKZQIwQmpMu2WZsNmlfMD+5S0UqwBnJ3/xLPjO+bYmBn/c5fg80jHloGe9fmjR5d57Y1XM",
        "keyid": ""
      }
    ]
  }
}